modified   ksaid_castle_hall.js modified   ksaid_forest.js modified   ksaid_greta_house.js modified   ksaid_passages.js modified   ksaid_town.js modified   legacymap.html modified   legacymap.js modified   tower_level_2.js * Completion of "King's Aide" maps

--- a/legacymap.html
+++ b/legacymap.html
@@ -70,6 +70,9 @@
 
   <!-- AddOn: King's Aide -->
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_castle_hall.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_cult_dungeon.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_cult_temple.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_finala.js" TYPE="text/javascript"></SCRIPT>
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_forest.js" TYPE="text/javascript"></SCRIPT>
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_greta_house.js" TYPE="text/javascript"></SCRIPT>
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_passages.js" TYPE="text/javascript"></SCRIPT>
