+ added Exp Pack maps from mervin.sk

--- a/legacymap.html
+++ b/legacymap.html
@@ -78,6 +78,21 @@
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_passages.js" TYPE="text/javascript"></SCRIPT>
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="ksaid_town.js" TYPE="text/javascript"></SCRIPT>
 
+  <!-- AddOn: Expansion Pack -->
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_ancient_tower.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_ancient_tower_cellar.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_andervill.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_andervill_cellar.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_black_forest.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_dark_hall.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_dead_forest.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_dungeon_of_the_dead.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_high_forest.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_hill_cave.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_ruined_catacombs.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_ruins_of_decrantes.js" TYPE="text/javascript"></SCRIPT>
+  <SCRIPT LANGUAGE="JavaScript1.2" SRC="exp_ruins_of_hranemus.js" TYPE="text/javascript"></SCRIPT>
+
   <SCRIPT LANGUAGE="JavaScript1.2" SRC="legacymap.js" TYPE="text/javascript"></SCRIPT>
   <STYLE TYPE="text/css">
     BODY { background-color: black; color: white; }
